--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -16,9 +16,7 @@ p {
 // html {
 //     font-size: 62.5%;
 // }
-body {
-    
-}
+
 .wrapper {
     width: 90%;
     max-width: 1280px;
@@ -38,7 +36,7 @@ h2 {
     border: none;
 }
 .removeItem {
-    background-color: #64B6AC;
+    background-color: #c179b9;
     margin: 5px;
 }
 input[type=submit] {
@@ -101,7 +99,7 @@ table {
 }
 
 table, th, td {
-    border: 1px solid black;
+    border: 2px solid black;
 }
 .tableWeekday {
     width: 15%;
@@ -135,17 +133,17 @@ li p {
 @media (max-width: 500px) {
     tr {
         display: flex;
-        // flex-direction: column;
         flex-wrap: wrap;
     }
     .weekdayItem {
         width: 100%;
         margin: 5px 0;
-        min-height: 30px;
+        min-height: 41.6px;
     }
     .tableWeekday {
-        width: 30%;
+        width: 50%;
         margin: 0 auto;
         text-align: center;
+        height: 80%;
     }
 }
