--- a/styles/style.css
+++ b/styles/style.css
@@ -268,7 +268,7 @@ h2 {
 }
 
 .removeItem {
-  background-color: #64B6AC;
+  background-color: #c179b9;
   margin: 5px;
 }
 
@@ -348,7 +348,7 @@ table {
 }
 
 table, th, td {
-  border: 1px solid black;
+  border: 2px solid black;
 }
 
 .tableWeekday {
@@ -404,11 +404,12 @@ li p {
   .weekdayItem {
     width: 100%;
     margin: 5px 0;
-    min-height: 30px;
+    min-height: 41.6px;
   }
   .tableWeekday {
-    width: 30%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
+    height: 80%;
   }
 }
