--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,149 +1,4 @@
 @import "setup";
-
-
-// stripping default styles
-h1,
-h2,
-h3,
-h4,
-ul,
-p {
-    margin: 0;
-    padding: 0;
-}
-
-// general styles
-// html {
-//     font-size: 62.5%;
-// }
-
-.wrapper {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-li {
-    list-style: none;
-    word-break: break-all;
-}
-h1,
-input[type=submit],
-h2 {
-    text-transform: uppercase;
-}
-.checkboxButton {
-    background: none;
-    border: none;
-}
-.removeItem {
-    background-color: #c179b9;
-    margin: 5px;
-}
-input[type=submit] {
-    background-color: #FCF0CC;
-}
-input[type=submit],
-input[type=text],
-select {
-    padding: 5px 15px;
-}
-input[type=submit],
-.removeItem {
-    border: none;
-}
-select:hover,
-input[type=submit]:hover,
-button:hover,
-li p:hover {
-    cursor: pointer;
-}
-input[type=text] {
-    width: 50%;
-}
-.scratchItemOff {
-    text-decoration: line-through;
-    color: #5D737E;
-}
-// header layout 
-header {
-    background-color: #2E9BFF;
-    min-height: 40vh;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 4vh;
-}
-h1,
-input[type=submit] {
-    margin-top: 3vh;
-}
-label {
-    margin-bottom: 1vh;
-    margin-top: 2vh;
-}
-
-// table layout
-main {
-    background-color: #a300ff;
-    padding: 5vh;
-    min-height: 60vh;
-}
-h2 {
-    text-align: center;
-    padding-bottom: 2vh;
-}
-table {
-    width: 100%;
-}
-
-table, th, td {
-    border: 2px solid black;
-}
-.tableWeekday {
-    width: 15%;
-    padding: 5px 10px;
-}
-.weekdayItem {
-    width: 85%;
-    padding: 5px 0;
-}
-li {
-    display: flex;
-    align-items: center;
-    
-}
-.checkboxButton,
-.removeItem {
-    flex-basis: calc(2.5% - (5px));
-    flex-shrink: 0;
-}
-li p {
-    flex-basis: calc(95% - 10px);
-    margin-right: 10px;
-    flex-grow: 1;
-}
-
-@media (max-width: 800px) {
-    input[type=text] {
-        width: 80%;
-    }
-}
-@media (max-width: 500px) {
-    tr {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .weekdayItem {
-        width: 100%;
-        margin: 5px 0;
-        min-height: 41.6px;
-    }
-    .tableWeekday {
-        width: 50%;
-        margin: 0 auto;
-        text-align: center;
-        height: 80%;
-    }
-}
+@import "elementStyling";
+@import "elementLayout";
+@import "mediaQueries";
