--- a/styles/scss/_elementLayout.scss
+++ b/styles/scss/_elementLayout.scss
@@ -76,3 +76,33 @@ main {
         }
     }
 }
+
+@media (max-width: 800px) {
+    header {
+        form {
+            input[type=text] {
+                width: 80%;
+                font-size: 0.75rem;
+            }
+        }
+    }
+}
+@media (max-width: 500px) {
+    main {
+        table {
+            tr {
+                display: flex;
+                flex-wrap: wrap;
+                .tableWeekday {
+                    width: 50%;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+    .weekdayItem {
+        width: 100%;
+        margin: 5px 0;
+        min-height: 45px;
+    }
+}
