--- a/styles/style.css
+++ b/styles/style.css
@@ -305,7 +305,7 @@ table, th, td {
 
 header {
   background-color: #2e9bff;
-  height: 40vh;
+  min-height: 40vh;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -322,7 +322,6 @@ header form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-bottom: 4vh;
 }
 
 header form h1,
@@ -348,7 +347,7 @@ header form input[type=text] {
 main {
   background-color: #da99ff;
   padding: 5vh;
-  min-height: 60vh;
+  min-height: 55vh;
 }
 
 main h2 {
@@ -407,6 +406,13 @@ main table tr .tableWeekday {
 
 .weekdayItem ul li .removeItem {
   margin: 3px;
+}
+
+footer {
+  background-color: #fcf0cc;
+  min-height: 5vh;
+  padding: 5px 0;
+  text-align: center;
 }
 
 @media (max-width: 800px) {
